--- a/package.json
+++ b/package.json
@@ -43,13 +43,14 @@
   },
   "dependencies": {
     "can-connect": "^1.3.3",
+    "can-util": "^3.2.2"
+  },
+  "devDependencies": {
+  	"can-define": "^1.0.16",
     "can-fixture": "^1.0.12",
     "can-list": "^3.0.2",
     "can-map": "^3.0.4",
     "can-map-define": "^3.0.4",
-    "can-util": "^3.2.2"
-  },
-  "devDependencies": {
     "documentjs": "^0.4.2",
     "jshint": "^2.9.1",
     "steal": "^1.2.4",
