--- a/package.json
+++ b/package.json
@@ -40,22 +40,22 @@
     "npmAlgorithm": "flat"
   },
   "dependencies": {
-    "can-connect": "^1.3.3",
+    "can-connect": "^1.5.0-pre.0",
     "can-util": "^3.2.2"
   },
   "devDependencies": {
-    "can-define": "^1.0.16",
-    "can-fixture": "^1.0.12",
-    "can-list": "^3.0.2",
-    "can-map": "^3.0.4",
-    "can-map-define": "^3.0.4",
+    "can-define": "^1.2.0-pre.4",
+    "can-fixture": "^1.1.0-pre.0",
+    "can-list": "^3.1.0-pre.9",
+    "can-map": "^3.1.0-pre.10",
+    "can-map-define": "^3.1.0-pre.0",
+    "done-serve": "^0.2.0",
+    "donejs-cli": "^0.9.4",
     "jshint": "^2.9.1",
     "steal": "^1.2.4",
     "steal-qunit": "^1.0.0",
     "steal-tools": "^1.1.2",
-    "testee": "^0.3.1",
-    "donejs-cli": "^0.9.4",
-    "done-serve": "^0.2.0"
+    "testee": "^0.3.1"
   },
   "directories": {
     "doc": "docs",
