--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
   "name": "can-connect-cloneable",
-  "version": "0.1.3",
+  "version": "0.2.0-pre.1",
   "description": "Allows you to make mutable clones of can-connected maps and save changes back to the original",
   "main": "can-connect-cloneable",
   "scripts": {
     "preversion": "npm test && npm run build",
     "version": "git commit -am \"Update dist for release\" && git checkout -b release && git add -f dist/",
-    "postversion": "git push --tags && git checkout master && git branch -D release && git push",
+    "postversion": "git push --tags && git checkout can-reflect && git branch -D release && git push",
     "testee": "testee test/test.html --browsers firefox",
     "test": "npm run jshint && npm run testee",
     "jshint": "jshint ./*.js --config",
-    "release:pre": "npm version prerelease && npm run build && npm publish",
+    "release:pre": "npm version prerelease && npm run build && npm publish --tag=pre",
     "release:patch": "npm version patch && npm publish",
     "release:minor": "npm version minor && npm publish",
     "release:major": "npm version major && npm publish",
@@ -40,22 +40,22 @@
     "npmAlgorithm": "flat"
   },
   "dependencies": {
-    "can-connect": "^1.3.3",
-    "can-util": "^3.2.2"
+    "can-connect": "^1.5.0-pre.0",
+    "can-util": "^3.9.0-pre.4"
   },
   "devDependencies": {
-    "can-define": "^1.0.16",
-    "can-fixture": "^1.0.12",
-    "can-list": "^3.0.2",
-    "can-map": "^3.0.4",
-    "can-map-define": "^3.0.4",
+    "can-define": "^1.2.0-pre.4",
+    "can-fixture": "^1.1.0-pre.0",
+    "can-list": "^3.1.0-pre.9",
+    "can-map": "^3.1.0-pre.10",
+    "can-map-define": "^3.1.0-pre.0",
+    "done-serve": "^1.3.0",
+    "donejs-cli": "^1.0.1",
     "jshint": "^2.9.1",
     "steal": "^1.2.4",
     "steal-qunit": "^1.0.0",
     "steal-tools": "^1.1.2",
-    "testee": "^0.3.1",
-    "donejs-cli": "^0.9.4",
-    "done-serve": "^0.2.0"
+    "testee": "^0.6.0"
   },
   "directories": {
     "doc": "docs",
