--- a/package.json
+++ b/package.json
@@ -39,15 +39,15 @@
     "npmAlgorithm": "flat"
   },
   "dependencies": {
-    "can-connect": "^1.5.0-pre.0",
-    "can-util": "^3.9.0-pre.4"
+    "can-connect": "^1.5.0",
+    "can-util": "^3.9.0"
   },
   "devDependencies": {
-    "can-define": "^1.2.0-pre.4",
-    "can-fixture": "^1.1.0-pre.0",
-    "can-list": "^3.1.0-pre.9",
-    "can-map": "^3.1.0-pre.10",
-    "can-map-define": "^3.1.0-pre.0",
+    "can-define": "^1.2.0",
+    "can-fixture": "^1.1.0",
+    "can-list": "^3.1.0",
+    "can-map": "^3.1.0",
+    "can-map-define": "^3.1.0",
     "done-serve": "^1.3.0",
     "donejs-cli": "^1.0.1",
     "jshint": "^2.9.1",
